--- a/07 - IPO/stream/docker-compose.yml
+++ b/07 - IPO/stream/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     ports:
       - "8501:8501"
     volumes:
-      - "./src:/usr/src/app/src"
-      - "./data:/usr/src/app/data"
+      - "./src:/src"
+      - "./src/data:/data"
