--- a/07 - IPO/stream/docker-compose.yml
+++ b/07 - IPO/stream/docker-compose.yml
@@ -2,8 +2,7 @@ version: "3"
 services:
   streamlit:
     build: .
-    #command: "streamlit run src/ipo.py"
-    command: 'cat src/data/simbolos'
+    command: "streamlit run src/ipo.py"
     ports:
       - "8501:8501"
     volumes:
