--- a/07 - IPO/stream/docker-compose.yml
+++ b/07 - IPO/stream/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3"
 services:
   streamlit:
     build: .
-    command: "streamlit run src/ipo.py"
+    # command: "streamlit run src/ipo.py"
+    command: 'python3 src/ipo.py'
     ports:
       - "8501:8501"
     volumes:
